# aws-sg-checker

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile
.hooks/: pre-commit
src/: check_cidrs.rs  describe_ec2.rs  ec2_client.rs  lib.rs  list_sg.rs  main.rs
