[package]
name = "sg_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-ec2 = { version = "1.60.0", features = ["behavior-version-latest"] }
clap = { version = "4.5.9", features = ["cargo"] }
tokio = { version = "1.38.1", features = ["macros"] }
